--- a/README.rdoc
+++ b/README.rdoc
@@ -1,1 +1,24 @@
+testing specs for recipes:
+name: string
+summary: text
+description: text
+
+- name must be present
+- name must be between 5 char and less than 100 char
+- summary must be present
+- summary must be between 10 char and less than 150 char
+- description must be present
+- description must be between 20 char and less than 500 char
+
+- chef_id must be present
+
+testing specs for chefs:
+chefname: string
+email: string
+
+- chefname must be present
+- chefname must be between 3 char and less than 40 char
+- email must be present
+- email must be valid
+- email must be unique
 
